# Pencil_Rigger

./: README.md
models/: fix.py  render.fragmentshader  render.vertexshader  test.rig
src/: CMakeLists.txt  FindGLFW.cmake  Joint.cpp  README.txt  argparser.h  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  cylinder_ring.cpp  cylinder_ring.h  edge.cpp  edge.h  face.cpp  face.h  glCanvas.cpp  glCanvas.h  hash.h  hit.h  hw3_gradesheet.txt  joint.h  kdtree.cpp  kdtree.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  photon.h  photon_mapping.cpp  photon_mapping.h  primitive.h  radiosity.cpp  radiosity.h  ray.h  raytracer.cpp  raytracer.h  raytree.cpp  raytree.h  rigger.cpp  (+8 more)
